--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             line-height: 1.6;
         }
         .container {
-            max-width: 1400px; /* Increased max-width for wider layout */
+            max-width: 1600px; /* Increased max-width for wider layout */
             margin: 20px auto;
-            padding: 15px; /* Reduced padding */
+            padding: 10px; /* Reduced padding */
             background-color: #fff;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -36,7 +36,7 @@
         .dashboard-grid {
             display: grid;
             grid-template-columns: 1fr;
-            gap: 15px; /* Reduced gap */
+            gap: 10px; /* Reduced gap */
         }
         @media (min-width: 768px) {
             .dashboard-grid {
@@ -73,7 +73,7 @@
         }
         .chart-section {
             background-color: #fff;
-            padding: 15px; /* Reduced padding */
+            padding: 10px; /* Reduced padding */
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
             margin-bottom: 15px; /* Reduced margin */
@@ -96,7 +96,7 @@
             overflow: hidden;
             border-radius: 8px;
             background-color: #e9ecef;
-            padding: 10px; /* Reduced padding */
+            padding: 5px; /* Reduced padding significantly */
             box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
             height: 500px; /* Adjusted height for chart slider container */
             display: flex;
@@ -114,7 +114,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            padding: 15px; /* Reduced padding */
+            padding: 5px; /* Reduced padding significantly */
             box-sizing: border-box;
 
             flex-direction: column;
@@ -241,7 +241,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 8px; /* Reduced gap */
-            width: 90%; /* Increased width */
+            width: 95%; /* Increased width */
             margin-top: 10px;
             font-size: 0.8em; /* Reduced font size */
         }
