--- a/index.html
+++ b/index.html
@@ -6,286 +6,8 @@
     <title>OptiSign Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f0f2f5;
-            color: #333;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 1600px; /* Increased max-width for wider layout */
-            margin: 20px auto;
-            padding: 10px; /* Reduced padding */
-            background-color: #fff;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
-        header {
-            text-align: center;
-            margin-bottom: 20px; /* Reduced margin */
-            padding-bottom: 15px; /* Reduced padding */
-            border-bottom: 1px solid #eee;
-        }
-        h1 {
-            font-size: 2.5em;
-            color: #003A52; /* Navy */
-            margin-bottom: 10px;
-            font-weight: 700;
-        }
-        .dashboard-grid {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 10px; /* Reduced gap */
-        }
-        @media (min-width: 768px) {
-            .dashboard-grid {
-                grid-template-columns: 1fr 2fr; /* Left sidebar, right main content */
-            }
-        }
-        .sidebar {
-            background-color: #f8f8f8;
-            padding: 15px; /* Reduced padding */
-            border-radius: 10px;
-            box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.05);
-        }
-        .sidebar h2 {
-            font-size: 1.5em;
-            color: #00657e; /* Teal */
-            margin-bottom: 10px; /* Reduced margin */
-            font-weight: 600;
-            border-bottom: 2px solid #00657e;
-            padding-bottom: 5px;
-        }
-        .world-clock-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 8px 0; /* Reduced padding */
-            border-bottom: 1px dashed #eee;
-        }
-        .world-clock-item:last-child {
-            border-bottom: none;
-        }
-        .world-clock-item span {
-            font-weight: 600;
-            color: #003A52;
-        }
-        .chart-section {
-            background-color: #fff;
-            padding: 10px; /* Reduced padding */
-            border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-            margin-bottom: 15px; /* Reduced margin */
-        }
-        .chart-section h2 {
-            font-size: 1.8em;
-            color: #003A52;
-            margin-bottom: 15px; /* Reduced margin */
-            text-align: center;
-            font-weight: 700;
-        }
-        .chart-container {
-            position: relative;
-            height: 450px; /* Adjusted height for charts */
-            width: 100%;
-            margin: 0 auto;
-        }
-        .chart-slider-container {
-            position: relative;
-            overflow: hidden;
-            border-radius: 8px;
-            background-color: #e9ecef;
-            padding: 5px; /* Reduced padding significantly */
-            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-            height: 500px; /* Adjusted height for chart slider container */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-        .chart-slide {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
-            position: absolute;
-            top: 0;
-            left: 0;
-            padding: 5px; /* Reduced padding significantly */
-            box-sizing: border-box;
-
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            z-index: 0;
-        }
-        .chart-slide.active {
-            opacity: 1;
-            visibility: visible;
-            z-index: 10;
-        }
-        .placeholder-text {
-            text-align: center;
-            color: #666;
-            font-style: italic;
-            padding: 30px; /* Reduced padding */
-        }
-        footer {
-            text-align: center;
-            margin-top: 30px; /* Reduced margin */
-            padding-top: 15px; /* Reduced padding */
-            border-top: 1px solid #eee;
-            color: #777;
-            font-size: 0.9em;
-        }
-        /* New styles for top info slider */
-        .top-info-slider-container {
-            position: relative;
-            overflow: hidden;
-            border-radius: 8px;
-            background-color: #e9ecef;
-            padding: 10px; /* Reduced padding */
-            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-            height: 480px; /* Increased height for top info slider */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 15px; /* Reduced margin */
-        }
-        .top-info-slide {
-            display: none;
-            width: 100%;
-            height: 100%;
-            text-align: center;
-            font-size: 1.1em; /* Reduced font size */
-            color: #003A52;
-            flex-direction: column;
-            justify-content: center;
-            position: absolute; /* For slide transition */
-            top: 0;
-            left: 0;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
-        }
-        .top-info-slide.active {
-            display: flex;
-            opacity: 1;
-            visibility: visible;
-        }
-        .top-info-slide h3 {
-            font-size: 1.6em; /* Reduced font size */
-            margin-bottom: 8px; /* Reduced margin */
-            color: #00657e;
-        }
-        .top-info-slide p {
-            font-size: 1em; /* Reduced font size */
-            color: #333;
-        }
-        /* Announcements Section */
-        .announcements-section {
-            background-color: #fff;
-            padding: 15px; /* Reduced padding */
-            border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-            margin-bottom: 15px; /* Reduced margin */
-        }
-        .announcements-section h2 {
-            font-size: 1.6em; /* Reduced font size */
-            color: #003A52;
-            margin-bottom: 15px;
-            text-align: center;
-            font-weight: 700;
-        }
-        .announcements-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-        .announcements-list li {
-            padding: 8px 0; /* Reduced padding */
-            border-bottom: 1px dashed #eee;
-            color: #555;
-            font-size: 0.9em; /* Reduced font size */
-            text-align: left; /* Align text to left */
-        }
-        .announcements-list li:last-child {
-            border-bottom: none;
-        }
-        /* Weather Specific Styles */
-        .weather-current-info {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-bottom: 10px; /* Reduced margin */
-        }
-        .weather-current-info #weather-icon-current {
-            width: 70px; /* Reduced icon size */
-            height: 70px; /* Reduced icon size */
-            margin-bottom: 5px;
-        }
-        .weather-current-info #temperature-current {
-            font-size: 2.5em; /* Reduced font size */
-            font-weight: bold;
-            color: #00657e;
-        }
-        .weather-current-info #status-current {
-            font-size: 1.1em; /* Reduced font size */
-            color: #555;
-            text-transform: capitalize;
-        }
-        .weather-details {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 8px; /* Reduced gap */
-            width: 95%; /* Increased width */
-            margin-top: 10px;
-            font-size: 0.8em; /* Reduced font size */
-        }
-        .weather-details div {
-            display: flex;
-            justify-content: space-between;
-            padding: 4px 0; /* Reduced padding */
-            border-bottom: 1px dotted #ccc;
-        }
-        .weather-details div:last-child, .weather-details div:nth-last-child(2) {
-            border-bottom: none;
-        }
-        .forecast-table {
-            width: 95%; /* Increased width */
-            margin-top: 15px; /* Reduced margin */
-            border-collapse: collapse;
-            font-size: 0.75em; /* Reduced font size */
-        }
-        .forecast-table th, .forecast-table td {
-            border: 1px solid #eee;
-            padding: 6px; /* Reduced padding */
-            text-align: center;
-        }
-        .forecast-table th {
-            background-color: #f0f0f0;
-            color: #003A52;
-        }
-        /* Exchange Rate Specific Styles */
-        .exchange-rate-info {
-            margin-bottom: 10px; /* Reduced margin */
-        }
-        .exchange-rate-info #current-exchange-rate-value {
-            font-size: 2em; /* Reduced font size */
-            font-weight: bold;
-            color: #00657e;
-            margin-bottom: 8px; /* Reduced margin */
-        }
-        .exchange-rate-chart-container {
-            position: relative;
-            height: 200px; /* Increased height for exchange rate chart */
-            width: 95%; /* Increased width */
-            margin: 0 auto;
-        }
-    </style>
+    <!-- Link to external custom CSS file -->
+    <link rel="stylesheet" href="styles/main.css"> 
 </head>
 <body class="bg-gray-100">
     <div class="container">
@@ -342,7 +64,6 @@
                             <div><span>Visibility:</span> <span id="visibility-current">-- mile</span></div>
                             <div><span>Sunrise:</span> <span id="sunrise-time">--</span></div>
                             <div><span>Sunset:</span> <span id="sunset-time">--</span></div>
-                            <!-- Removed Fine Dust -->
                         </div>
                         <table class="forecast-table">
                             <thead>
