--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                                 <canvas id="KCCIChart"></canvas>
                             </div>
                         </div>
+                        <div class="table-section" id="KCCITableContainer">
+                            <!-- KCCI Table will be rendered here by JS -->
+                        </div>
                     </div>
 
                     <!-- Chart 2: SCFI Composite Index & Routes -->
@@ -127,6 +130,9 @@
                             <div class="chart-container">
                                 <canvas id="SCFIChart"></canvas>
                             </div>
+                        </div>
+                        <div class="table-section" id="SCFITableContainer">
+                            <!-- SCFI Table will be rendered here by JS -->
                         </div>
                     </div>
 
@@ -138,6 +144,9 @@
                                 <canvas id="WCIChart"></canvas>
                             </div>
                         </div>
+                        <div class="table-section" id="WCITableContainer">
+                            <!-- WCI Table will be rendered here by JS -->
+                        </div>
                     </div>
 
                     <!-- Chart 4: IACI Composite Index -->
@@ -147,6 +156,9 @@
                             <div class="chart-container">
                                 <canvas id="IACIChart"></canvas>
                             </div>
+                        </div>
+                        <div class="table-section" id="IACITableContainer">
+                            <!-- IACI Table will be rendered here by JS -->
                         </div>
                     </div>
 
@@ -158,6 +170,9 @@
                                 <canvas id="blankSailingChart"></canvas>
                             </div>
                         </div>
+                        <div class="table-section" id="BLANK_SAILINGTableContainer">
+                            <!-- BLANK_SAILING Table will be rendered here by JS -->
+                        </div>
                     </div>
 
                     <!-- Chart 6: FBX Indices -->
@@ -167,6 +182,9 @@
                             <div class="chart-container">
                                 <canvas id="FBXChart"></canvas>
                             </div>
+                        </div>
+                        <div class="table-section" id="FBXTableContainer">
+                            <!-- FBX Table will be rendered here by JS -->
                         </div>
                     </div>
 
@@ -178,6 +196,9 @@
                                 <canvas id="XSIChart"></canvas>
                             </div>
                         </div>
+                        <div class="table-section" id="XSITableContainer">
+                            <!-- XSI Table will be rendered here by JS -->
+                        </div>
                     </div>
 
                     <!-- Chart 8: MBCI Indices -->
@@ -188,13 +209,13 @@
                                 <canvas id="MBCIChart"></canvas>
                             </div>
                         </div>
+                        <div class="table-section" id="MBCITableContainer">
+                            <!-- MBCI Table will be rendered here by JS -->
+                        </div>
                     </div>
                 </div>
             </main>
-            <!-- Sidebar is now empty or can be removed if not needed -->
-            <aside class="sidebar">
-                <!-- This sidebar is now empty as content has been moved to main -->
-            </aside>
+            <!-- Sidebar is now removed as its content has been integrated into the main section -->
         </div>
 
         <footer>
